--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A useful and simple package to create an react accordion.",
   "author": "MostafaRostami72",
   "license": "MIT",
-  "repository": "MostafaRostami72/reactjs-accordions",
+  "repository": "https://github.com/MostafaRostami72/reactjs-accordions",
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
   "source": "src/index.js",
@@ -12,8 +12,8 @@
     "node": ">=10"
   },
   "scripts": {
-    "build": "microbundle-crl --no-compress --format modern,cjs",
-    "start": "microbundle-crl watch --no-compress --format modern,cjs",
+    "build": "microbundle-crl --css-modules false --format modern,cjs",
+    "start": "microbundle-crl watch --no-compress --css-modules false --format modern,cjs",
     "prepare": "run-s build",
     "test": "run-s test:unit test:lint test:build",
     "test:build": "run-s build",
@@ -49,5 +49,9 @@
   },
   "files": [
     "dist"
-  ]
+  ],
+  "dependencies": {
+    "node-sass": "^5.0.0",
+    "sass": "^1.32.11"
+  }
 }
