--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reactjs-accordions",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A useful and simple package to create an react accordion.",
   "author": "MostafaRostami72",
   "license": "MIT",
@@ -24,7 +24,7 @@
     "deploy": "gh-pages -d example/build"
   },
   "peerDependencies": {
-    "react": "^16.0.0"
+    "react": ">16.0.0"
   },
   "devDependencies": {
     "microbundle-crl": "^0.13.10",
